--- a/src/assets/styles/common/color.less
+++ b/src/assets/styles/common/color.less
@@ -6,3 +6,19 @@
 @grey: #90919d;
 @red: #c00;
 @orange: #fc0;
+
+  ._blue {
+    color: @blue;
+  }
+  ._light-blue {
+    color: @light-blue;
+  }
+  ._black{
+      color: @black;
+  }
+  ._grey {
+    color: @grey;
+  }
+  ._red {
+    color: @red;
+  }
