--- a/src/assets/styles/components/app.less
+++ b/src/assets/styles/components/app.less
@@ -10,3 +10,30 @@ body {
         }
     }
 }
+h1,
+h2 {
+  font-size: 123%;
+  font-weight: 500;
+  margin-top: 4px;
+  margin-bottom: 8px;
+}
+.container {
+  width: 941px;
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
+  margin: 0 auto;
+  padding-right: 17px;
+}
+
+@media (min-width: 1600px){
+  .inline-hockey__title, h1, h2 {
+  font-size: 136%;
+  }
+}
+@media (min-width: 1600px) {
+.home-arrow__promo, .inline-hockey__content, .inline-stocks__popup, .media-grid, .qU, .widget {
+  font-size: 107.7%;
+  line-height: 1.36;
+  }
+}
