--- a/src/assets/styles/components/components.less
+++ b/src/assets/styles/components/components.less
@@ -1,4 +1,11 @@
 @import "app.less";
+@import "headline.less";
+@import "news.less";
 @import "desk-notif.less";
+@import "services.less";
+@import "search.less";
+@import "widget.less";
+@import "traffic.less";
+@import "weather.less";
 @import "link.less";
 @import "button.less";
