--- a/src/assets/styles/components/search.less
+++ b/src/assets/styles/components/search.less
@@ -4,10 +4,17 @@
       margin-top: -55px;
 
     }
-  
+  &__yabrowser-promo{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 8px;
+    min-width: 100px;
+    padding-right: 12px;
+    padding-left: 42px;
+  }
   }
   .arrow__wrapper{
-    margin-left: 20px;
+    margin-left: 23px;
     position: relative;
   }
   .arrow__logo{
